# lockfile-lint

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  add_API_documentation_for_scanner_module_17.md
docs/docs/: api.md
src/: add_--quiet_mode_for_CI_CD_pipelines_2.py  add_--quiet_mode_for_CI_CD_pipelines_6.py  add_CSV_JSON_export_for_scan_results_9.py  add_WebSocket_health_check_endpoint_13.py  batch_database_writes_to_reduce_I_O_14.py  clean_up_unused_imports_18.py  consolidate_duplicate_regex_patterns_3.py  consolidate_duplicate_regex_patterns_8.py  implement_concurrent_scan_worker_pool_15.py  implement_subdomain_enumeration_module_12.py  lazy-load_optional_dependencies_10.py  missing_Content-Type_header_in_API_calls_11.py  replace_threading.Lock_with_asyncio.Lock_16.py  timezone_conversion_in_uptime_tracking_4.py  unify_error_handling_across_modules_5.py
src/analyzer/: __init__.py  personality_profile_extraction_from_messages.py
src/api/: utils.py
src/audit/: __init__.py  bandit_static_analysis_integration.py
src/cli/: --json_output_format_flag.py  __init__.py
src/core/: __init__.py  constants.py  signal_handling_for_graceful_shutdown.py
src/lockfile_lint/: __init__.py  __main__.py  cli.py  config.py  formatter.py  malicious_db_ext.py  rules.py  scanner.py  version.py
src/notify/: Telegram_alert_integration.py  __init__.py
src/validator/: __init__.py  (+1 more)
tests/: conftest.py  test_add_edge_case_coverage_for_parser_7.py  test_add_unit_tests_for_scanner_module_1.py  test_scanner.py
(+1 files in other folders)
