[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lockfile-lint"
version = "0.1.0"
description = "Fast lockfile security scanner — detects supply-chain attacks, malicious packages, and integrity violations"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Lappy000" }]
keywords = ["security", "supply-chain", "npm", "lockfile", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
lockfile-lint = "lockfile_lint.cli:main"

[project.urls]
Repository = "https://github.com/Lappy000/lockfile-lint"
Issues = "https://github.com/Lappy000/lockfile-lint/issues"

[tool.ruff]
line-length = 100
target-version = "py39"
